# rust_music_player

./: Cargo.toml  LICENSE
src/: config.rs  main.rs  mpd_api.rs  mpd_client.rs
