[package]
name = "learning_iced"
version = "0.1.0"
edition = "2024"

[dependencies]
iced_fonts = { version = "0.3.0", features = ["fontawesome", "lucide"] }
iced = { version = "*", features = ["image", "tokio"] }
mpd = "*"
image = "*"
futures = "0.3.*"
tokio = { version = "1.52.1", features = ["full"] }
